// This is the public API offered by the metrics service.
syntax = "proto3";

import "google/api/annotations.proto";
import "google/api/http.proto";
import "google/api/httpbody.proto";

package com.example.stateless.metricservice;

option go_package = "tck/stateless/metricservice";


message Metric {
    int64 value = 2;
}

message Average {
    double value = 1;
}

service MetricService {

    rpc Collect(Metric) returns (Average) {
        option (google.api.http) = {
            post: "/metrics/avg",
            body: "*",
        };
    }

    rpc CollectStreamIn(stream Metric) returns (Average) {
        option (google.api.http) = {
            post: "/streamin/metrics/avg",
            body: "*",
        };
    }

    rpc CollectStreamOut(Metric) returns (stream Average) {
        option (google.api.http) = {
            post: "/streamout/metrics/avg",
            body: "*",
        };
    }

    rpc CollectStreamed(stream Metric) returns (stream Average) {
        option (google.api.http) = {
            post: "/streamed/metrics/avg",
            body: "*",
        };
    }
}
